[package]
name = "opendal-ext"
version = "0.57.0"
authors = ["Eric E. Gold"]
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false
description = "OpenDAL Extension"
readme = "README.md"

[dependencies]
humantime-serde = "1"
opendal = { version = "0.57.0", default-features = false, features = ["blocking", "layers-logging", "layers-retry", "layers-throttle", "layers-concurrent-limit"] }
strum = { version = "0.28.0", features = ["derive"] }
serde_with = { version = "3", features = ["base64"] }
bytesize = { version = "2", features = ["serde"] }
derive_setters = "0.1"
serde-value = "0.7"
anyhow = "1"
serde = "1"
paste = "1"
heck = "0.5"
async-trait = "0.1.89"
futures-lite = "2.6.1"
tokio = { version = "1.52", features = ["sync"] }
log = "0.4.33"

[target.'cfg(not(windows))'.dependencies]
# sftp only exists on non-windows; leave as its own line, gated by our "sftp" feature too

[features]
default = ["memory"]
memory = ["opendal/services-memory"]
b2 = ["opendal/services-b2"]
ftp = ["opendal/services-ftp"]
swift = ["opendal/services-swift"]
azblob = ["opendal/services-azblob"]
azdls = ["opendal/services-azdls"]
azfile = ["opendal/services-azfile"]
cos = ["opendal/services-cos"]
fs = ["opendal/services-fs"]
dropbox = ["opendal/services-dropbox"]
gdrive = ["opendal/services-gdrive"]
gcs = ["opendal/services-gcs"]
ghac = ["opendal/services-ghac"]
http = ["opendal/services-http"]
ipmfs = ["opendal/services-ipmfs"]
obs = ["opendal/services-obs"]
onedrive = ["opendal/services-onedrive"]
oss = ["opendal/services-oss"]
pcloud = ["opendal/services-pcloud"]
s3 = ["opendal/services-s3"]
webdav = ["opendal/services-webdav"]
webhdfs = ["opendal/services-webhdfs"]
yandex-disk = ["opendal/services-yandex-disk"]
sftp = ["opendal/services-sftp"]           # non-windows only

throttle = ["opendal/layers-throttle"]

full = [
    "b2", "ftp", "swift", "azblob", "azdls", "azfile", "cos", "fs", "dropbox",
    "gdrive", "gcs", "ghac", "http", "ipmfs", "obs", "onedrive", "oss", "pcloud",
    "s3", "webdav", "webhdfs", "yandex-disk", "throttle",
]

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
bad_style = { level = "warn", priority = -1 }
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
dead_code = "warn"
improper_ctypes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_shorthand_field_patterns = "warn"
no_mangle_generic_items = "warn"
overflowing_literals = "warn"
path_statements = "warn"
patterns_in_fns_without_body = "warn"
trivial_numeric_casts = "warn"
unused_results = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unconditional_recursion = "warn"
unused = { level = "warn", priority = -1 }
unused_allocation = "warn"
unused_comparisons = "warn"
unused_parens = "warn"
while_true = "warn"
unreachable_pub = "allow"

[lints.clippy]
redundant_pub_crate = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# expect_used = "warn" # TODO!
# unwrap_used = "warn" # TODO!
literal_string_with_formatting_args = "allow"
enum_glob_use = "warn"
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cast_lossless = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
module_name_repetitions = "allow"
missing_const_for_fn = "allow"
needless_raw_string_hashes = "allow"

[lints.rustdoc]
# We run rustdoc with `--document-private-items` so we can document private items
private_intra_doc_links = "allow"